--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,17 @@
         <div class="row">
             <div class="col-lg-12 text-center v-center">
                 <h1>Test Heroku deploy site with python</h1>
-                <p class="lead">This is a dummy sign up request</p>
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation" class="active"><a href="#">Home</a></li>
+                    <li role="presentation"><a href="showSuccess">Next</a></li>
+                    </li>
+                </ul>
+            </nav>
+                <p class="lead">This is a dummy sign up request!</p>
                 <br>
-                <form class="col-lg-12" action="{{url_for('prereg')}}" method="POST">
-                    <div class="input-group" style="width:340px;text-align:center;margin:0 left;">
+                <form class="col-lg-12" action="/enterEmail" method="post">
+                    <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
                         <input class="form-control input-lg" title="This will save your email" placeholder="Enter your email address" type="email" name="email">
                         <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">Click</button></span>
                     </div>
@@ -36,8 +43,8 @@
         </div>
     </div>
     <!-- script references -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+<!--     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+ -->    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 
