--- a/templates/success.html
+++ b/templates/success.html
@@ -18,14 +18,14 @@
             <div class="col-lg-12 text-center v-center">
                 <h1>Test Heroku deploy site with python</h1>
                 <br>
-                <form class="col-lg-12">
+                <form class="col-lg-12" action="/returnHome" method="get">
                     <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
                         <h3>Thank you!</h3>
                         <p>Thanks for your email address.</p>
+                        <button class="btn btn-lg btn-primary" type="submit">Click</button>
                     </div>
                 </form>
             </div>
-
         </div>
         <br>
         <br>
